--- a/_posts/2016-07-29-newzbykg.markdown
+++ b/_posts/2016-07-29-newzbykg.markdown
@@ -3,9 +3,7 @@ layout: newz
 title: About.KG 
 ---
 
-I have experience handling customer and technical support, billing & sells, producing video content and designing web sites for clients. These skills mixed with numerous experiences, make me uniquely qualified. I have had to manage expectations, assure clients, identify and resolve issues all while communicating in a clear, concise manner; providing an great overall experience.
-
-I'm formally trained in the arts at New York Film Academy and have worked for a publishing company in New York where I learned technical skills like: copy writing, managing social media and producing content. I also honed my media and technical skills working for independent clients and contracts. I have 5 plus years of customer support experience with companies like Lowe's, MPower Electric and Netflix, nearly 2 years of driving with a spotless record. 2 years formal training in film and photography.
+I have experience handling customer and technical support, billing & sells, producing video content and designing web sites for clients. I'm formally trained in the arts at New York Film Academy and have worked for a publishing company in New York where I learned technical skills like: copy writing, managing social media and producing content. I also honed my media and technical skills working for independent clients and contracts. I have 5 plus years of customer support experience with companies like Lowe's, MPower Electric and Netflix, nearly 2 years of driving with a spotless record. 2 years formal training in film and photography.
 
 I've learned and adapted to use a wide range of tools, including: FedEx Ship Manager. UPS WorldShip. Netsuite inventory and sales. Netflix's custom CRM, bug tracker and help desk. Microsoft Windows, Office 365, & Internet Explorer. Avid Pro Tools. Apple macOS, iOS, Final Cut, Logic & Safari. Adobe Creative Suite. Google Chrome, Search & Android.
 
