--- a/_posts/2016-07-29-newzbykg.markdown
+++ b/_posts/2016-07-29-newzbykg.markdown
@@ -3,9 +3,9 @@ layout: newz
 title: About.KG 
 ---
 
-I have experience handling customer/technical support, billing & sells, producing video and designing web sites for clients. I was formally trained at New York Film Academy. I honed my media and technical skills working for independent clients and contracts. I have 5 plus years of customer support experience with companies like Lowe's, MPower Electric and Netflix, nearly 2 years of driving with a spotless record. 2 years training in film and photography.
+I have experience handling customer/technical support, billing & sells, producing video and designing web sites for clients. I was formally trained at New York Film Academy. I honed my media and technical skills working for independent clients and contracts. 6 years of customer support experience with companies like Lowe's and Netflix, 2 years of driving with a spotless record. 2 years in film and photography.
 
-I've learned to use a range of tools, including: FedEx Ship Manager. UPS WorldShip. Netsuite inventory and sales. Netflix's custom CRM, bug tracker and help desk. Microsoft Windows, Office 365. Avid Pro Tools. Apple macOS, iOS, Final Cut, Logic. Adobe Creative Suite. Google ChromeOS & Android.
+I've learned to use a range of tools: FedEx Ship Manager. UPS WorldShip. Netsuite inventory and sales. Netflix's custom CRM, bug tracker and help desk. Microsoft Windows, Office 365. Avid Pro Tools. Apple macOS, iOS, Final Cut, Logic. Adobe Creative Suite. Google ChromeOS & Android.
 
 I am  available at bio @ kevingailey .com, and by cell at (860)255-8511 Thank you stopping by, KG.
 
